# cline-python

./: README.md  pyproject.toml
.cursor/rules/: about-project.mdc  uv-usages.mdc
src/: main.py
src/app/: db.py  settings.py
src/schemas/pg_schema/: base.py
